fixed whitespace in controllers file

--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -414,13 +414,6 @@ $rounded-corners-bottom: 0px 0px 15px 15px;
 	}
 }
 
-.invisible-margin {
-	width: 100%;
-	height: 3vh;
-	min-height: 10px;
-	clear: both;
-}
-
 .logo{
 	height: 100%;
 	width: auto;
